feat(layout storage) add local storage of size and state of the layout
Closes #1584

--- a/client/pages/process-definition.html
+++ b/client/pages/process-definition.html
@@ -15,7 +15,7 @@
     <div class="view-pills" id="cockpit.processDefinition.view"></div>
   </div>
 
-  <div class="ctn-content-container ctn-collapsable-parent">
+  <div class="ctn-content-container" ctn-collapsable-parent="sidebar">
 
     <!-- tool bar -->
     <div class="ctn-toolbar">
@@ -27,7 +27,7 @@
     </div>
 
     <!-- sidebar -->
-    <div class="ctn-column ctn-sidebar ctn-collapsable ctn-scroll" collapsable="left">
+    <div class="ctn-column ctn-sidebar ctn-scroll" ctn-collapsable="left">
 
       <div class="filters" ng-controller="ProcessDefinitionFilterController">
         <h5>
@@ -206,7 +206,7 @@
       <a class="hide-collapsable pull-right"></a>
     </div>
 
-    <div class="ctn-column ctn-content ctn-collapsable-parent">
+    <div class="ctn-column ctn-content" ctn-collapsable-parent="tabs">
 
       <!-- content top pane -->
       <div class="ctn-row ctn-content-top">
@@ -214,7 +214,7 @@
       </div>
 
       <!-- content bottom pane -->
-      <div class="ctn-row ctn-content-bottom ctn-tabbed ctn-collapsable" collapse="bottom">
+      <div class="ctn-row ctn-content-bottom ctn-tabbed" ctn-collapsable="bottom">
         <div ng-show="processDefinitionTabs.length">
           <ul class="nav nav-tabs">
             <li ng-class="{ active: selectedTab == tabProvider }" ng-repeat="tabProvider in processDefinitionTabs">
