--- a/client/pages/process-instance.html
+++ b/client/pages/process-instance.html
@@ -18,7 +18,7 @@
     <div class="view-pills" id="cockpit.processInstance.view"></div>
   </div>
 
-  <div class="ctn-content-container ctn-collapsable-parent">
+  <div class="ctn-content-container" ctn-collapsable-parent="sidebar">
 
     <!-- toolbar -->
     <div class="ctn-toolbar">
@@ -31,7 +31,7 @@
     </div>
 
     <!-- sidebar -->
-    <div class="ctn-column ctn-sidebar ctn-collapsable ctn-scroll" collapsable="left">
+    <div class="ctn-column ctn-sidebar ctn-scroll" ctn-collapsable="left">
 
       <div class="filters" ng-controller="ProcessInstanceFilterController">
         <h5>
@@ -72,7 +72,7 @@
       <a class="hide-collapsable pull-right"></a>
     </div>
 
-    <div class="ctn-column ctn-content ctn-collapsable-parent">
+    <div class="ctn-column ctn-content" ctn-collapsable-parent="tabs">
 
       <!-- content top pane -->
       <div class="ctn-row ctn-content-top">
@@ -80,7 +80,7 @@
       </div>
 
       <!-- content bottom pane -->
-      <div class="ctn-row ctn-content-bottom ctn-tabbed ctn-collapsable" collapse="bottom">
+      <div class="ctn-row ctn-content-bottom ctn-tabbed" ctn-collapsable="bottom">
         <div ng-show="processInstanceTabs.length">
           <ul class="nav nav-tabs">
             <li ng-class="{ active: selectedTab == tabProvider }" ng-repeat="tabProvider in processInstanceTabs">
