feat(cockpit/candidate groups): add the ability to manage groups of a task
This commit adds a button in the user task table
who opens a modal window allowing to add or remove candidate groups to a user task.
For easier testing of that new feature a process definition called "User task identity links test 1"
with predefined groups, assignee and owners has been created.

Additional changes:
- A small directive providing a widget to edit, simple text variable, in place - like the name of asignee
- Adds some comments for jsdoc
- Improve the linting of some files

Closes CAM-1182

--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>camunda Cockpit</title>
+    <title ng-bind="pageTitle" ng-init="pageTitle = 'camunda Cockpit'">camunda Cockpit</title>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -48,7 +48,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          
+
           <div ng-include="'templates/navigation.html'"></div>
         </div>
       </div>
@@ -57,8 +57,8 @@
     <!-- content -->
     <div class="ctn-main">
       <div class="ctn-wrapper">
-        <div class="notifications-panel"></div>
         <div class="breadcrumbs-panel"></div>
+        <div notifications-panel class="notifications-panel"></div>
 
         <!-- view body provided by ngView -->
         <div ng-view>
