--- a/client/index.html
+++ b/client/index.html
@@ -55,8 +55,8 @@
     <!-- content -->
     <div class="ctn-main">
       <div class="ctn-wrapper">
-        <div class="notifications-panel"></div>
-        <div class="breadcrumbs-panel"></div>
+        <div cam-breadcrumbs-panel divider="&raquo;" class="breadcrumbs-panel"></div>
+        <div notifications-panel class="notifications-panel"></div>
 
         <!-- view body provided by ngView -->
         <div ng-view>
