--- a/client/webapp/src/main/webapp/app/tasklist/index.html
+++ b/client/webapp/src/main/webapp/app/tasklist/index.html
@@ -48,7 +48,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          
+
           <div ng-include="'templates/navigation.html'"></div>
         </div>
       </div>
@@ -57,8 +57,8 @@
     <!-- content -->
     <div class="ctn-main">
       <div class="ctn-wrapper container-fluid">
-        <div class="notifications-panel"></div>
-        <div class="breadcrumbs-panel"></div>
+        <div cam-breadcrumbs-panel divider="&raquo;" class="breadcrumbs-panel"></div>
+        <div notifications-panel class="notifications-panel"></div>
 
         <div class="row-fluid" if-logged-in>
           <div class="ctn-sidebar span3" sidebar>
