--- a/client/webapp/src/main/webapp/app/cockpit/index.html
+++ b/client/webapp/src/main/webapp/app/cockpit/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title ng-bind="pageTitle" ng-init="pageTitle = 'camunda Cockpit'">camunda Cockpit</title>
+    <title>camunda Cockpit</title>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -57,7 +57,7 @@
     <!-- content -->
     <div class="ctn-main">
       <div class="ctn-wrapper">
-        <div class="breadcrumbs-panel"></div>
+        <div cam-breadcrumbs-panel divider="&raquo;" class="breadcrumbs-panel"></div>
         <div notifications-panel class="notifications-panel"></div>
 
         <!-- view body provided by ngView -->
