feat(cockpit/activity tree): add filtering by name and state
This commit adds a textfield on top of the activities tree who
can be used to quickly find an acivity instance.
If applicable, a set of checkboxes is also added in order to
refine the search by the state (running, completed or canceled).

This commit also improve the linting of some files and fix
a small styling issue (activity label ot taking the whole
available width of the tree leaf).

Related: CAM-1874, CAM-1895

--- a/client/directives/activity-instance-tree.html
+++ b/client/directives/activity-instance-tree.html
@@ -1,9 +1,11 @@
 <!-- # CE - src/main/webapp/app/cockpit/directives/activity-instance-tree.html -->
 <div class="tree-node" >
 
-  <div class="tree-node-group">
+  <div ng-class="{ 'state-running': !node.endTime, 'state-completed' : node.endTime && !node.canceled, 'state-canceled': node.endTime && node.canceled }"
+       class="tree-node-group">
 
-    <span class="tree-node-label" ng-class="{ 'selected' : node.isSelected }">
+    <span class="tree-node-label"
+          ng-class="{ 'selected' : node.isSelected, 'has-children': node.children.length }">
 
       <button class="btn btn-link btn-control-link btn-toggle" ng-if="node.children.length" ng-click="toggleOpen()">
         <i ng-class="{ 'icon-chevron-right' : !node.isOpen, 'icon-chevron-down' : node.isOpen }"></i>
