--- a/client/webapp/src/main/webapp/app/cockpit/pages/process-instance.html
+++ b/client/webapp/src/main/webapp/app/cockpit/pages/process-instance.html
@@ -44,6 +44,13 @@
           </button>
         </h5>
 
+        <div cam-quick-filter
+             name-filter
+             holder-selector=".instance-tree"
+             label-selector=".tree-node-label"
+             item-selector=".tree-node-group">
+        </div>
+
         <div class="filter">
           <button class="btn btn-link btn-mini btn-control"
                   ng-show="filterData.activityInstanceCount"
