improve(cockpit): add cache busting and minor UX improvements
This commit adds a cache busting (to prevent the browsers to keep outdated versions of assets).

Related: CAM-1899

--- a/client/webapp/src/main/webapp/app/tasklist/index.html
+++ b/client/webapp/src/main/webapp/app/tasklist/index.html
@@ -13,7 +13,7 @@
     <base href="$BASE" tasklist-api="$APP_ROOT/api/tasklist/" engine-api="$APP_ROOT/api/engine/" app-root="$APP_ROOT" />
 
     <!-- styles -->
-    <link href="$APP_ROOT/assets/css/tasklist/loader.css" rel="stylesheet" />
+    <link href="$APP_ROOT/assets/css/tasklist/loader.css?bust=CACHE_BUSTER" rel="stylesheet" />
 
     <!-- For IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -26,7 +26,7 @@
     <!-- scripts -->
     <script src="$APP_ROOT/assets/vendor/requirejs/require.js"></script>
 
-    <script src="$APP_ROOT/app/tasklist/tasklist-bootstrap.js"></script>
+    <script src="$APP_ROOT/app/tasklist/tasklist-bootstrap.js?bust=CACHE_BUSTER"></script>
 
     <!--[if IE 9]>
       <script src="$APP_ROOT/assets/vendor/jquery-placeholder/jquery-placeholder.js"></script>
