--- a/client/webapp/src/main/webapp/app/cockpit/directives/activity-instance-tree.html
+++ b/client/webapp/src/main/webapp/app/cockpit/directives/activity-instance-tree.html
@@ -17,7 +17,10 @@
       </button>
 
       <a id="{{ node.id }}"
-         ng-click="select($event)">
+         ng-click="select($event)"
+         help
+         help-placement="top"
+         help-text="{{ node.name }}">
         {{ node.name }}
       </a>
 
