--- a/client/webapp/src/main/webapp/app/cockpit/pages/process-definition.html
+++ b/client/webapp/src/main/webapp/app/cockpit/pages/process-definition.html
@@ -3,7 +3,9 @@
 
   <div class="ctn-header">
     <h1>
-      <i class="icon-type icon-inbox"></i>
+      <i class="icon-type icon-inbox"
+         help
+         help-text="Process definition"></i>
       {{ processDefinition.name || processDefinition.key }}
 
       <span class="badge badge-warning badge-suspended"
