--- a/client/webapp/src/main/webapp/app/cockpit/pages/process-instance.html
+++ b/client/webapp/src/main/webapp/app/cockpit/pages/process-instance.html
@@ -2,7 +2,9 @@
 <div class="ctn-fixed-view">
   <div class="ctn-header">
     <h1>
-      <i class="icon-type icon-inbox"></i>
+      <i class="icon-type icon-inbox"
+         help
+         help-text="Process instance"></i>
       {{ processDefinition.name || processDefinition.key }}
 
       <span title="Process instance id, as it appears in the database">
