improve(cockpit): add cache busting and minor UX improvements
This commit adds a cache busting (to prevent the browsers to keep outdated versions of assets).

Related: CAM-1899

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     <base href="$BASE" cockpit-api="$APP_ROOT/api/cockpit/" engine-api="$APP_ROOT/api/engine/" app-root="$APP_ROOT" />
 
     <!-- styles -->
-    <link href="$APP_ROOT/assets/css/cockpit/loader.css" rel="stylesheet" />
+    <link href="$APP_ROOT/assets/css/cockpit/loader.css?bust=CACHE_BUSTER" rel="stylesheet" />
 
     <!-- For IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -32,7 +32,7 @@
 
     <script src="$APP_ROOT/assets/vendor/requirejs/require.js"></script>
 
-    <script src="$APP_ROOT/app/cockpit/cockpit-bootstrap.js"></script>
+    <script src="$APP_ROOT/app/cockpit/cockpit-bootstrap.js?bust=CACHE_BUSTER"></script>
   </head>
   <body>
     <!-- navigation -->
