improve(cockpit/misc): add minor improvements
- Add comments to some templates for easier development.
- Add the ability to run a certain set of e2e tests
  (using environment variable "E2E_TESTS")

--- a/client/webapp/src/main/webapp/app/tasklist/directives/form-field.html
+++ b/client/webapp/src/main/webapp/app/tasklist/directives/form-field.html
@@ -1,3 +1,4 @@
+<!-- # CE - src/main/webapp/app/tasklist/directives/form-field.html -->
 <div ng-switch="controlType" class="inline">
 
   <!--handling of SELECT elements -->
@@ -44,3 +45,4 @@
     </div>
   </div>
 </div>
+<!-- / CE - src/main/webapp/app/tasklist/directives/form-field.html -->
