--- a/client/webapp/src/main/webapp/app/tasklist/directives/sidebar.html
+++ b/client/webapp/src/main/webapp/app/tasklist/directives/sidebar.html
@@ -1,3 +1,4 @@
+<!-- # CE - src/main/webapp/app/tasklist/directives/sidebar.html -->
 <div class="well sidebar-nav" ng-show="tasks">
   <ul class="nav nav-list">
     <li class="nav-header">Tasks</li>
@@ -24,3 +25,4 @@
     </li>
   </ul>
 </div>
+<!-- / CE - src/main/webapp/app/tasklist/directives/sidebar.html -->
