--- a/client/webapp/src/main/webapp/develop/forms/select.html
+++ b/client/webapp/src/main/webapp/develop/forms/select.html
@@ -1,3 +1,4 @@
+<!-- # CE - src/main/webapp/develop/forms/select.html -->
 <div class="control-group">
 
   <!--
@@ -32,3 +33,4 @@
     <input form-field type="string" name="serviceTaskType" />
   </div>
 </div>
+<!-- / CE - src/main/webapp/develop/forms/select.html -->
