--- a/client/webapp/src/main/webapp/develop/invoice/select-approver.html
+++ b/client/webapp/src/main/webapp/develop/invoice/select-approver.html
@@ -1,3 +1,4 @@
+<!-- # CE - src/main/webapp/develop/invoice/select-approver.html -->
 <p><strong>Welcome to select box paradise!</strong></p>
 
 <p>
@@ -91,3 +92,4 @@
 
 Test
 {{formVariable('selectedName')}}
+<!-- / CE - src/main/webapp/develop/invoice/select-approver.html -->
