--- a/client/webapp/src/main/webapp/app/tasklist/pages/task.html
+++ b/client/webapp/src/main/webapp/app/tasklist/pages/task.html
@@ -1,3 +1,4 @@
+<!-- # CE - src/main/webapp/app/tasklist/pages/task.html -->
 <div class="control-group" ng-show="form.loaded">
   <h5>Complete Task</h5>
   <h3>{{ task.name }}</h3>
@@ -31,11 +32,12 @@
     </div>
 
     <div ng-if="form.embedded || form.generic">
-      <button class="btn btn-primary" 
+      <button class="btn btn-primary"
               ng-disabled="variablesForm.$invalid"
               type="submit">{{ !task.delegationState || task.delegationState == 'RESOLVED' ? 'Complete Task' : 'Resolve Task' }}</button>
-      
+
       <button class="btn" ng-click="cancel()">Cancel</button>
     </div>
   </form>
 </div>
+<!-- / CE - src/main/webapp/app/tasklist/pages/task.html -->
