--- a/client/webapp/src/main/webapp/app/tasklist/pages/task.html
+++ b/client/webapp/src/main/webapp/app/tasklist/pages/task.html
@@ -33,8 +33,12 @@
 
     <div ng-if="form.embedded || form.generic">
       <button class="btn btn-primary"
-              ng-disabled="variablesForm.$invalid"
-              type="submit">{{ !task.delegationState || task.delegationState == 'RESOLVED' ? 'Complete Task' : 'Resolve Task' }}</button>
+              ng-disabled="variablesForm.$invalid || variablesForm.locked"
+              type="submit">
+        {{ !task.delegationState || task.delegationState == 'RESOLVED' ? 'Complete Task' : 'Resolve Task' }}
+        <i class="icon-white icon-refresh animate-spin"
+           ng-if="variablesForm.locked"></i>
+      </button>
 
       <button class="btn" ng-click="cancel()">Cancel</button>
     </div>
