impr(cockpit/quickFilter): adjust style of input field
related to CAM-1874

--- a/client/directives/quick-filter.html
+++ b/client/directives/quick-filter.html
@@ -3,18 +3,24 @@
       class="quick-filters">
   <div class="quick-filter name-filter"
        ng-if="showNameFilter">
-   <label class="input-append">
-     <input ng-keyup="search()"
-            ng-model="name"
-            name="name"
-            type="text" />
-     <span class="add-on"
-           help
-           help-text="Click here to clear the field value.">
-       <i class="icon-search"
-          ng-click="clearName()"></i>
-     </span>
-   </label>
+    <label class="input-append">
+      <input ng-keyup="search()"
+          ng-model="name"
+          name="name"
+          type="text" />
+      <span class="add-on"
+         help
+         help-text="Click here to clear the field value.">
+      <i class="icon-search"
+        ng-click="clearName()"></i>
+      </span>  
+    </label>
+    <button class="btn btn-small btn-link btn-control-link"
+            type="button"
+            help
+            help-text="Filters activity instances that have the entered name.">
+      <i class="icon-question-sign"></i>
+    </button>    
   </div>
 
   <div class="quick-filter state-filter"
