improve(cockpit/style): add colors to the activity badges in cockpit

--- a/client/directives/quick-filter.html
+++ b/client/directives/quick-filter.html
@@ -28,7 +28,7 @@
     <span class="name">State</span>
     <ul class="inline">
       <li>
-        <label class="btn btn-mini"
+        <label class="btn btn-mini running"
                help
                help-text="Running Activity Instance"
                help-placement="'bottom'">
@@ -40,7 +40,7 @@
         </label>
       </li>
       <li>
-        <label class="btn btn-mini"
+        <label class="btn btn-mini completed"
                help
                help-text="Completed Activity Instance"
                help-placement="'bottom'">
@@ -52,7 +52,7 @@
         </label>
       </li>
       <li>
-        <label class="btn btn-mini"
+        <label class="btn btn-mini canceled"
                help
                help-text="Canceled Activity Instance"
                help-placement="'bottom'">
