--- a/client/webapp/src/main/webapp/app/cockpit/index.html
+++ b/client/webapp/src/main/webapp/app/cockpit/index.html
@@ -11,6 +11,15 @@
 
     <!-- settings the base path for relative links -->
     <base href="$BASE" cockpit-api="$APP_ROOT/api/cockpit/" engine-api="$APP_ROOT/api/engine/" app-root="$APP_ROOT" />
+    <!-- an example of plugin/feature exclusion -->
+    <!--
+    <base href="$BASE"
+          cockpit-api="$APP_ROOT/api/cockpit/"
+          engine-api="$APP_ROOT/api/engine/"
+          app-root="$APP_ROOT"
+          cam-exclude-plugins="cockpit.dashboard:process-definition-tiles" />
+    -->
+
 
     <!-- styles -->
     <link href="$APP_ROOT/assets/css/cockpit/loader.css?bust=CACHE_BUSTER" rel="stylesheet" />
