chore(cockpit): adjust tooltip texts
related to CAM-1989

--- a/client/pages/process-instance.html
+++ b/client/pages/process-instance.html
@@ -13,7 +13,9 @@
 
       <span class="badge badge-warning badge-suspended"
             ng-show="processInstance.suspended"
-            title="Currently suspended">
+            help
+            help-text="Currently suspended"
+            help-placement="'top'">
         <i class="icon-suspended white"></i>
       </span>
     </h1>
