--- a/client/pages/process-definition.html
+++ b/client/pages/process-definition.html
@@ -10,7 +10,9 @@
 
       <span class="badge badge-warning badge-suspended"
             ng-show="processDefinition.suspended"
-            title="Currently suspended">
+            help
+            help-text="Currently suspended"
+            help-placement="'top'">
         <i class="icon-suspended white"></i>
       </span>
     </h1>
